--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 							<p> OVERVIEW: I used the British Airways  customer review data collected between 2016 to 2023. 
 								METHODS: I have focused my analysis on 6 service categories provided by the airline.
 								I have initially cleaned and explored the data in Python (link below).
-								I have generated a very user friendly and interactive dashboard in Tablesu (link below) presenting the average customer ratings based on the time series, 
+								I have generated a very user friendly and interactive dashboard in Tableau (link below) presenting the average customer ratings based on the time series, 
 								Continent, type of aircraft, number of reviews and a map displaying the countries from where the data has been collected.
 								INFERENCES: European Union and North America has the highest number of reviews when compared to other countries. 
 								Among the services provided by the air line, highest rating is assoiated with cabin staff service, followed by ground service.
-- Lowest rating is associated with food and beverages followed by entertainment.we can notice that there is no difference in ratings before and after Covid-19.
+ Lowest rating is associated with food and beverages followed by entertainment. We can notice that there is no difference in ratings before and after Covid-19.
 								*Please view the dashboard in full screen mode in order to have a clear visualization </p>
 								<ul class="actions special">
 									<li><a href= "https://github.com/shilpakarumanchi/British-Airways/blob/main/README.md" target="_blank" class="button">View Project Summary</a></li>
